
  - Upgrade to LanguageTool 3.6
  https://sourceforge.net/p/omegat/feature-requests/1299/

  - Improve TBX parsing
  https://sourceforge.net/p/omegat/feature-requests/1268/

  - Support SRX format


  - If multiple versions of the same plugin are present, only the latest is loaded
  https://sourceforge.net/p/omegat/feature-requests/1519/

  Bug fixes:

  - Google2 Translate MT connector failed to parse response
  https://sourceforge.net/p/omegat/bugs/1206/

  - Incompatible among LanguageTool@6 and lucene-gosen@5 from omegat-org
  https://sourceforge.net/p/omegat/bugs/1204/

  - Integration test(docker) failure with 503
  https://sourceforge.net/p/omegat/bugs/1199/

  - Content of notes elements are not displayed correctly with Xliff filter
  https://sourceforge.net/p/omegat/bugs/1192/

  - ProjectFile has unwanted XML element otherAttributes
  https://sourceforge.net/p/omegat/bugs/1191/

  - Languagetool crashes when reloading the project
  https://sourceforge.net/p/omegat/bugs/1182/

  - Stardict dictionary displays apostrophe as html entity code
  https://sourceforge.net/p/omegat/bugs/1181/

  - #1180 Font does not scale on HiDPI display on Linux
  https://sourceforge.net/p/omegat/bugs/1180/

  - build/release: Windows binary signature with PKCS#11 HSM
  https://sourceforge.net/p/omegat/bugs/1179/

  - Team(git): when connecting new server, connection failed
  https://sourceforge.net/p/omegat/bugs/1177/

  - The COMPILE event is fired after the target commit
  https://sourceforge.net/p/omegat/bugs/1176/

  - Passphrase for SSH key is stored with key= null://null:-1
  https://sourceforge.net/p/omegat/bugs/1174/

  - OmegaT ask passphrase to connect git+ssh server but dialog label is user/pass
  https://sourceforge.net/p/omegat/bugs/1173/

  - Team project failed to merge changes with TMXMerge
  https://sourceforge.net/p/omegat/bugs/1170/

  - Useless warning log from CSS parser library
  https://sourceforge.net/p/omegat/bugs/1169/
