@@ -2332,7 +2332,11 @@ PROJECT_W_GLOSSARY=No writable glossary file in the glossary folder.
 PROJECT_LOCKED=Project locked. Perhaps it is already opened in another OmegaT instance
 PROJECT_INVALID=The specified folder is not an OmegaT project, or the project file is broken, or there is no valid backup.
 
-#Team work
+# Auto Saving exceptions
+AUTOSAVE_LOCK_ACQUISITION_TIMEOUT=Unable to get exclusive lock for autosave.
+AUTOSAVE_GENERIC_ERROR=Error while autosaving: {0}
+
+# Team work
 SVN_START=SVN '{0}' execution start
 SVN_FINISH=SVN '{0}' execution finished successfully
 SVN_ERROR=SVN '{0}' error: {1}
